# esp32-chatbot

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  app.cc  app.h  idf_component.yml  main.cc  type_def.h  work_task.cc  work_task.h
main/drivers/: sd_card.cc  sd_card.h
main/drivers/audio/: audio_es7210.cc  audio_es7210.h  audio_input_interface.h  wav_recorder.cc  wav_recorder.h
main/drivers/storage/: file_interface.h  sd_card.cc  sd_card.h
